Add code for preprocessing GDSC2 dataset

--- a/pathway_gene_cellline_features.ipynb
+++ b/pathway_gene_cellline_features.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "628a9282-bc25-4e92-b7ee-6ef2edfbb557",
+   "metadata": {},
+   "source": [
+    "# Notebook for preparing the Cell line feature data\n",
+    "\n",
+    "### 1. Read the pathways and genes for PID c2 curated pathways"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "a04678d8-226a-49b6-87fa-8ff2763f01b3",
@@ -20,6 +30,14 @@
     "    genes.extend(gene)\n",
     "\n",
     "genes = set(genes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ca27ff7-2735-4ef5-9300-95ac5f77b43c",
+   "metadata": {},
+   "source": [
+    "### 2. Read the cell line data, and filter out only the GDSC2 cell lines"
    ]
   },
   {
@@ -227,6 +245,14 @@
     "cell_line_mapping.columns=cell_line_mapping.columns.str.strip()\n",
     "cell_line_mapping = cell_line_mapping[cell_line_mapping.Datasets.eq(\"GDSC2\")].drop_duplicates([\"Model ID\", \"COSMIC ID\"])\n",
     "cell_line_mapping"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc21650f-c0ea-4737-9937-4d5fe2c3c1a2",
+   "metadata": {},
+   "source": [
+    "### 3. Read the GDSC2 drug data response data and remove the cell lines for which drug response is missing"
    ]
   },
   {
@@ -844,6 +870,14 @@
    "source": [
     "cell_line_mapping = cell_line_mapping[cell_line_mapping[\"COSMIC ID\"].isin(drug.index.get_level_values(level=0).unique())]\n",
     "cell_line_mapping"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86e534e0-e2f6-4c9a-ab81-bcfbe7aa65a3",
+   "metadata": {},
+   "source": [
+    "### 4. Read the RNA-seq data, and keep only the Sanger source, pathway genes, filtered cell lines, and apply log transformation on tpm values"
    ]
   },
   {
@@ -1534,6 +1568,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "05ff05ea-5276-438f-b540-9016249410a8",
+   "metadata": {},
+   "source": [
+    "### 5. Read the mutation data, keep the sanger source, pathway genes, and filtered cell lines, and convert to binary (0,1)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "27e5ef35-7bbe-4f16-8089-9d3eab66afac",
@@ -1945,6 +1987,20 @@
     ")\n",
     "filtered_mutation_matrix.to_csv(\"processed_data/gdsc_sanger_pid_mutation.csv\")\n",
     "filtered_mutation_matrix"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1597ddc-a0bc-4a2f-aea5-7ebcee03b5b7",
+   "metadata": {},
+   "source": [
+    "### 6. Read CNV data for Sanger source, pathway genes, and filtered cell lines.\n",
+    "Apply GISTIC2 threshold:\n",
+    "- Deletion: -2\n",
+    "- Loss: -1\n",
+    "- Neutral: 0\n",
+    "- Gain: 1\n",
+    "- Amplification: 2"
    ]
   },
   {
@@ -2763,6 +2819,14 @@
     "# filtered_cnv_matrix = filtered_cnv_matrix.loc[:,filtered_cnv_matrix.notna().all()]\n",
     "# filtered_cnv_matrix.to_csv(\"processed_data/gdsc_sanger_pid_cnv.csv\")\n",
     "filtered_cnv_matrix"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32232c8b-cc46-4802-a094-3f8381d817e5",
+   "metadata": {},
+   "source": [
+    "### 7. Keep only the common cell lines across the data"
    ]
   },
   {
