Remove the notebook cells with unwanted scripts

--- a/preprocess_drug_data.ipynb
+++ b/preprocess_drug_data.ipynb
@@ -5,7 +5,7 @@
    "id": "a70670c8-75a5-4a3c-92b0-98cb3ecb6048",
    "metadata": {},
    "source": [
-    "### Preprocessing the GDSC drug data\n",
+    "## Preprocessing the GDSC drug data\n",
     "The notebook contains the necessary scripts to generate Morgan Fingerprint for Drugs, and creates a CSV file with cell line drug response alongwith the Morgan Fingerprint"
    ]
   },
